# santricity-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SNAPSHOTS.md  SNAPSHOTS_CLONES.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
scripts/: k8s_santricity_mapper.py
src/santricity_client/: __init__.py  capabilities.py  cli.py  cli_schema.py  client.py  config.py  exceptions.py  http.py
src/santricity_client/auth/: __init__.py  base.py  basic.py  jwt.py  saml.py
src/santricity_client/automation/: __init__.py  facade.py  snapshots.py  volumecopy.py
src/santricity_client/reports/: __init__.py  controllers.py  facade.py  interfaces_report.py  mappings.py
src/santricity_client/resources/: __init__.py  base.py  clones.py  consistency_groups.py  hosts.py  interfaces.py  mappings.py  pools.py  snapshots.py  system.py  volumes.py
tests/: test_automation_cg.py  test_capabilities.py  test_cli.py  test_cli_cgs.py  test_cli_env.py  test_client.py  test_hosts.py  test_interfaces.py  test_mappings_report.py  test_pools.py  test_reports_controllers.py  test_reports_interfaces.py  test_resources.py  test_snapshots_workflow_cli.py  test_volumes.py
