[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "santricity-client"
version = "0.1.0"
description = "Python client for NetApp E-Series SANtricity REST API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "SANtricity Python Contributors", email = "scaleoutsean@noreply.users.github.com" }
]
keywords = ["netapp", "santricity", "storage", "rest", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "requests>=2.32.0",
    "typing_extensions>=4.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "requests-mock>=1.12.1",
    "ruff>=0.6.0",
    "build>=1.2.1",
    "twine>=5.1.1",
    "typer>=0.12.5",
    "rich>=13.7.0"
]

cli = [
    "typer>=0.12.5",
    "rich>=13.7.0"
]

[project.urls]
Homepage = "https://github.com/user/santricity-client"
Issues = "https://github.com/user/santricity-client/issues"

[project.scripts]
santricity = "santricity_client.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
